# C_Graphics_GLFW

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
scripts/: script.lua
shaders/: basic.frag  basic.vert
src/: app.c  app.h  camera.c  camera.h  camera_controller.c  camera_controller.h  input.c  input.h  lua_engine.c  lua_engine.h  main.c  material.c  material.h  mesh.c  mesh.h  renderer.c  renderer.h  scene.c  scene.h  shader.c  shader.h  texture.c  texture.h  transform.c  transform.h  utils.c  utils.h
